--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <!-- <header>
+<body class="home grid">
+    <header>
         <nav>
-            <h3>Home</h3>
-            <h3>Search</h3>
+            <a href="#"><h3>Home</h3></a>
+            <a href="#"><h3>Search</h3></a>
         </nav>
-    </header> -->
+    </header>
     <main>
         <section class="recents">
             <h1>Good Afternoon</h1>
@@ -32,12 +32,36 @@
                 <h1>Your shows</h1>
                 <a>Show all</a>
             </div>
+            <div class="list grid">
+                <div>
+                    <img src="assets/effwon.jpeg" alt="Eff won">
+                    <h4>eff won with DRS</h4>
+                    <h5>Primate</h5>
+                </div>
+                <div>
+                    <img src="assets/effwon.jpeg" alt="Eff won">
+                    <h4>eff won with DRS</h4>
+                    <h5>Primate</h5>
+                </div>
+            </div>
         </section>
 
         <section class="todays-hits">
             <div class="flex">
                 <h1>Today's biggest hits</h1>
                 <a>Show all</a>
+            </div>
+            <div class="list grid">
+                <div>
+                    <img src="assets/effwon.jpeg" alt="Eff won">
+                    <h4>eff won with DRS</h4>
+                    <h5>Primate</h5>
+                </div>
+                <div>
+                    <img src="assets/effwon.jpeg" alt="Eff won">
+                    <h4>eff won with DRS</h4>
+                    <h5>Primate</h5>
+                </div>
             </div>
         </section>
     </main>
