--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     </header>
     <main>
         <section class="recents">
-            <h1>Good Afternoon</h1>
+            <h1>Good afternoon</h1>
             <div class="playlists grid">
-                <a href="#"><h3>Liked Songs</h3></a>
+                <a href="#" class="flex">
+                    <img src="assets/likedsongs.jpg" alt="">
+                    <h3>Liked Songs</h3>
+                </a>
                 <a href="#"><h3>Your Episodes</h3></a>
                 <a href="#"><h3>New Episodes</h3></a>
                 <a href="#"><h3>The Journal.</h3></a>
@@ -39,9 +42,9 @@
                     <h5>Primate</h5>
                 </div>
                 <div>
-                    <img src="assets/effwon.jpeg" alt="Eff won">
-                    <h4>eff won with DRS</h4>
-                    <h5>Primate</h5>
+                    <img src="assets/thejournal.jpeg" alt="Eff won">
+                    <h4>The Journal.</h4>
+                    <h5>The Wall Street Journal</h5>
                 </div>
             </div>
         </section>
@@ -58,9 +61,9 @@
                     <h5>Primate</h5>
                 </div>
                 <div>
-                    <img src="assets/effwon.jpeg" alt="Eff won">
-                    <h4>eff won with DRS</h4>
-                    <h5>Primate</h5>
+                    <img src="assets/thejournal.jpeg" alt="Eff won">
+                    <h4>The Journal.</h4>
+                    <h5>The Wall Street Journal</h5>
                 </div>
             </div>
         </section>
