Add images and fix text wrap

--- a/index.html
+++ b/index.html
@@ -22,11 +22,26 @@
                     <img src="assets/likedsongs.jpg" alt="">
                     <h3>Liked Songs</h3>
                 </a>
-                <a href="#"><h3>Your Episodes</h3></a>
-                <a href="#"><h3>New Episodes</h3></a>
-                <a href="#"><h3>The Journal.</h3></a>
-                <a href="#"><h3>eff won with DRS</h3></a>
-                <a href="#"><h3>The Potterverse: A Harry Potter Podcast</h3></a>
+                <a href="#" class="flex">
+                    <img src="assets/likedsongs.jpg" alt="">
+                    <h3>Your Episodes</h3>
+                </a>
+                <a href="#" class="flex">
+                    <img src="assets/likedsongs.jpg" alt="">
+                    <h3>New Episodes</h3>
+                </a>
+                <a href="#" class="flex">
+                    <img src="assets/thejournal.jpeg" alt="">
+                    <h3>The Journal.</h3>
+                </a>
+                <a href="#" class="flex">
+                    <img src="assets/effwon.jpeg" alt="">
+                    <h3>eff won with DRS</h3>
+                </a>
+                <a href="#" class="flex">
+                    <img src="assets/thepotterverse.png" alt="">
+                    <h3>The Potterverse: A Harry Potter Podcast</h3>
+                </a>
             </div>
         </section>
 
