Made items responsively appear and added sidebar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
             <a href="#"><h3>Search</h3></a>
         </nav>
     </header>
+
+    <aside>
+        <a href="#"><h3>Your Library</h3></a>
+        <div class="flex">
+            <button>Playlists</button>
+            <button>Podcasts</button>
+        </div>
+        <div>
+            <div class="flex">
+                <img src="assets/likedsongs.jpg" alt="">
+                <p>Liked Songs</p>
+            </div>
+            <div class="flex">
+                <img src="assets/likedsongs.jpg" alt="">
+                <p>Liked Songs</p>
+            </div>
+            <div class="flex">
+                <img src="assets/likedsongs.jpg" alt="">
+                <p>Liked Songs</p>
+            </div>
+        </div>
+    </aside>
+
     <main>
         <section class="recents">
             <h1>Good afternoon</h1>
@@ -61,6 +84,16 @@
                     <h4>The Journal.</h4>
                     <h5>The Wall Street Journal</h5>
                 </div>
+                <div>
+                    <img src="assets/effwon.jpeg" alt="Eff won">
+                    <h4>eff won with DRS</h4>
+                    <h5>Primate</h5>
+                </div>
+                <div>
+                    <img src="assets/thejournal.jpeg" alt="Eff won">
+                    <h4>The Journal.</h4>
+                    <h5>The Wall Street Journal</h5>
+                </div>
             </div>
         </section>
 
@@ -70,6 +103,16 @@
                 <a>Show all</a>
             </div>
             <div class="list grid">
+                <div>
+                    <img src="assets/effwon.jpeg" alt="Eff won">
+                    <h4>eff won with DRS</h4>
+                    <h5>Primate</h5>
+                </div>
+                <div>
+                    <img src="assets/thejournal.jpeg" alt="Eff won">
+                    <h4>The Journal.</h4>
+                    <h5>The Wall Street Journal</h5>
+                </div>
                 <div>
                     <img src="assets/effwon.jpeg" alt="Eff won">
                     <h4>eff won with DRS</h4>
