--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <button>Playlists</button>
             <button>Podcasts</button>
         </div>
-        <div>
-            <div class="flex">
+        <div class="list">
+            <a href="#" class="flex">
                 <img src="assets/likedsongs.jpg" alt="">
-                <p>Liked Songs</p>
-            </div>
-            <div class="flex">
+                <h4>Liked Songs</h4>
+            </a>
+            <a href="#" class="flex">
                 <img src="assets/likedsongs.jpg" alt="">
-                <p>Liked Songs</p>
-            </div>
-            <div class="flex">
+                <h4>Liked Songs</h4>
+            </a>
+            <a href="#" class="flex">
                 <img src="assets/likedsongs.jpg" alt="">
-                <p>Liked Songs</p>
-            </div>
+                <h4>Liked Songs</h4>
+            </a>
         </div>
     </aside>
 
