Add scrollable div and fix formatting

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <aside>
-        <a href="#"><h3>Your Library</h3></a>
+        <h3>Your Library</h3>
         <div class="flex">
             <button>Playlists</button>
             <button>Podcasts</button>
@@ -85,9 +85,9 @@
                     <h5>The Wall Street Journal</h5>
                 </div>
                 <div>
-                    <img src="assets/effwon.jpeg" alt="Eff won">
-                    <h4>eff won with DRS</h4>
-                    <h5>Primate</h5>
+                    <img src="assets/thepotterverse.png" alt="Eff won">
+                    <h4>The Potterverse: A Harry Potter Podcast</h4>
+                    <h5>Mary & Blake Media</h5>
                 </div>
                 <div>
                     <img src="assets/thejournal.jpeg" alt="Eff won">
@@ -114,9 +114,9 @@
                     <h5>The Wall Street Journal</h5>
                 </div>
                 <div>
-                    <img src="assets/effwon.jpeg" alt="Eff won">
-                    <h4>eff won with DRS</h4>
-                    <h5>Primate</h5>
+                    <img src="assets/thepotterverse.png" alt="Eff won">
+                    <h4>The Potterverse: A Harry Potter Podcast</h4>
+                    <h5>Mary & Blake Media</h5>
                 </div>
                 <div>
                     <img src="assets/thejournal.jpeg" alt="Eff won">
