Fix layout and add search.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body class="home grid">
     <header>
         <nav>
-            <a href="#"><h3>Home</h3></a>
-            <a href="#"><h3>Search</h3></a>
+            <a href="#" class="active"><h3>Home</h3></a>
+            <a href="search.html"><h3>Search</h3></a>
         </nav>
     </header>
 
