--- a/index.html
+++ b/index.html
@@ -32,32 +32,7 @@
             <script>
                 document.getElementById('greeting').innerHTML = new Date().getHours() >= 12 ? 'Good afternoon' : 'Good morning';
             </script>
-            <div class="playlists grid">
-                <a href="#" class="flex">
-                    <img src="assets/likedsongs.jpg" alt="">
-                    <h3>Liked Songs</h3>
-                </a>
-                <a href="#" class="flex">
-                    <img src="assets/likedsongs.jpg" alt="">
-                    <h3>Your Episodes</h3>
-                </a>
-                <a href="#" class="flex">
-                    <img src="assets/likedsongs.jpg" alt="">
-                    <h3>New Episodes</h3>
-                </a>
-                <a href="#" class="flex">
-                    <img src="assets/thejournal.jpeg" alt="">
-                    <h3>The Journal.</h3>
-                </a>
-                <a href="#" class="flex">
-                    <img src="assets/effwon.jpeg" alt="">
-                    <h3>eff won with DRS</h3>
-                </a>
-                <a href="#" class="flex">
-                    <img src="assets/thepotterverse.png" alt="">
-                    <h3>The Potterverse: A Harry Potter Podcast</h3>
-                </a>
-            </div>
+            <div class="playlists grid"></div>
         </section>
 
         <section class="your-shows">
@@ -65,57 +40,15 @@
                 <h1>Your shows</h1>
                 <a>Show all</a>
             </div>
-            <div class="list grid">
-                <div>
-                    <img src="assets/effwon.jpeg" alt="Eff won">
-                    <h4>eff won with DRS</h4>
-                    <h5>Primate</h5>
-                </div>
-                <div>
-                    <img src="assets/thejournal.jpeg" alt="Eff won">
-                    <h4>The Journal.</h4>
-                    <h5>The Wall Street Journal</h5>
-                </div>
-                <div>
-                    <img src="assets/thepotterverse.png" alt="Eff won">
-                    <h4>The Potterverse: A Harry Potter Podcast</h4>
-                    <h5>Mary & Blake Media</h5>
-                </div>
-                <div>
-                    <img src="assets/thejournal.jpeg" alt="Eff won">
-                    <h4>The Journal.</h4>
-                    <h5>The Wall Street Journal</h5>
-                </div>
-            </div>
+            <div class="list grid"></div>
         </section>
 
-        <section class="todays-hits">
+        <section class="saved-episodes">
             <div class="flex">
-                <h1>Today's biggest hits</h1>
+                <h1>Saved episodes</h1>
                 <a>Show all</a>
             </div>
-            <div class="list grid">
-                <div>
-                    <img src="assets/effwon.jpeg" alt="Eff won">
-                    <h4>eff won with DRS</h4>
-                    <h5>Primate</h5>
-                </div>
-                <div>
-                    <img src="assets/thejournal.jpeg" alt="Eff won">
-                    <h4>The Journal.</h4>
-                    <h5>The Wall Street Journal</h5>
-                </div>
-                <div>
-                    <img src="assets/thepotterverse.png" alt="Eff won">
-                    <h4>The Potterverse: A Harry Potter Podcast</h4>
-                    <h5>Mary & Blake Media</h5>
-                </div>
-                <div>
-                    <img src="assets/thejournal.jpeg" alt="Eff won">
-                    <h4>The Journal.</h4>
-                    <h5>The Wall Street Journal</h5>
-                </div>
-            </div>
+            <div class="list grid"></div>
         </section>
     </main>
 
