Add profile details modal

--- a/index.html
+++ b/index.html
@@ -59,11 +59,25 @@
         </section>
 
         <section class="profile-modal flex showing">
-            <a href="#">Profile</a>
+            <a href="#" id="profile-button">Profile</a>
             <a href="#">Account</a>
             <a href="#">Settings</a>
             <a href="#">Logout</a>
         </section>
+
+        <dialog class="profile-details">
+            <div class="flex">
+                <div class="flex" id="details">
+                    <img src="assets/likedsongs.jpg" alt="">
+                    <div class="flex">
+                        <h6>Profile</h6>
+                        <h1>Ben Pham</h1>
+                        <h5>4 Public Playlists &bull; 1 Follower &bull; 2 Following</h5>
+                    </div>
+                </div>
+                <button id="close">&times;</button>
+            </div>
+        </dialog>
     </main>
 
     <footer></footer>
