Add toggle content feature to aside content

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         </div>
         
         <div class="flex">
-            <button>Playlists</button>
-            <button>Podcasts</button>
+            <button id="playlist-btn">Playlists</button>
+            <button id="podcast-btn">Podcasts</button>
         </div>
 
-        <div class="list"></div>
+        <div class="list">
+            <div class="aside-content" id="playlist"></div>
+            <div class="aside-content" id="podcast"></div>
+        </div>
     </aside>
 
     <main>
