Finish toggle buttons in aside

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         
         <div class="flex">
+            <button id="close">&times;</button>
             <button id="playlist-btn">Playlists</button>
             <button id="podcast-btn">Podcasts</button>
         </div>
